--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ env:
   - distribution: ubuntu
     version: 16.04
     python: 3.5
-#  - distribution: ubuntu
-#    version: 16.04
-#    python: 2.7
+  - distribution: ubuntu
+    version: 16.04
+    python: 2.7
 
 services:
   - docker
