--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ env:
   - distribution: ubuntu
     version: 16.04
     python: 2.7
+  - distribution: ubuntu
+    version: 14.04
+    python: 3.4
+  - distribution: ubuntu
+    version: 14.04
+    python: 2.7
 
 services:
   - docker
