--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,21 @@
 sudo: required
 
 env:
+  - disribution: centos
+    version: 7
+    python: 3.4
   - distribution: ubuntu
     version: 16.04
     python: 3.5
   - distribution: ubuntu
-    version: 16.04
-    python: 2.7
-  - distribution: ubuntu
     version: 14.04
     python: 3.4
-  - distribution: ubuntu
-    version: 14.04
-    python: 2.7
+#  - distribution: ubuntu
+#    version: 14.04
+#    python: 2.7
+#  - distribution: ubuntu
+#    version: 16.04
+#    python: 2.7
 
 services:
   - docker
