--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 
 env:
   - disribution: centos
-    version: centos7
+    version: 7
     python: 3.4
   - distribution: ubuntu
     version: 16.04
