Add debian sid to travis test, patch fedora rawhide.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 sudo: required
 
 env:
+  - distribution: debian
+    version: sid
+    python: 3
   - distribution: fedora
     version: rawhide
     python: 3
