Add debian 'etch' circa 2010

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: required
 
 env:
   - distribution: debian
+    version: 4
+    python: 3
+  - distribution: debian
     version: sid
     python: 3
   - distribution: fedora
