travis / debian etch

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 
 env:
   - distribution: debian
-    version: 4
+    version: etch
     python: 3
   - distribution: debian
     version: sid
