travis for debian wheezy

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 
 env:
   - distribution: debian
-    version: etch
+    version: wheezy
     python: 3
   - distribution: debian
     version: sid
